--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@foundry-rs/foundry-toolchain",
-  "version": "1.0.8",
+  "name": "@bgd-labs/foundry-zksync-toolchain",
+  "version": "1.0.0",
   "license": "SEE LICENSE IN LICENSE",
   "main": "dist/index.js",
   "keywords": [
@@ -14,7 +14,8 @@
     "dapptools"
   ],
   "scripts": {
-    "build": "ncc build src/index.js -o dist --source-map && ncc build src/save.js -o dist/save --source-map"
+    "build": "ncc build src/index.js -o dist --source-map && ncc build src/save.js -o dist/save --source-map",
+    "ci:publish": "npm run build && npm publish --access=public"
   },
   "dependencies": {
     "@actions/cache": "^3.1.2",
